@@ -22,6 +22,9 @@ NOTICE: Restart wiseService before capture when upgrading
   - NOTE - RHEL/Centos 6 is no longer supported, Node 12 required
   - release - node 12.18.2, glib 2.64.3
   - viewer - aes256Encryption now defaults to true
+  - capture - http2 decoding for PRI * h2 sessions
+  - capture - set http2 protocol when alpn is h2
+  - capture - upgrade h2c http2 decoding
 
 2.3.2 2020/06/29
   - NOTE - 2.3.x will be the last version to support RHEL/Centos 6
